# moo

./: .gitignore  README.md  build-development.sh  build-release.sh  build.sh  create-widoco-container.sh  moo.shacl.ttl  pyproject.toml
.github/workflows/: release.yml  tests.yml
development/ontology/: index-en.html  ontology.jsonld  ontology.nt  ontology.rdf  ontology.ttl
development/ontology/provenance/: provenance-en.html  provenance-en.ttl
development/ontology/sections/: abstract-en.html  crossref-en.html  description-en.html  introduction-en.html  overview-en.html
docs/: activity.drawio  design_notes.md
docs/JETDS/: table-1.csv  table-2.csv  table-3.csv  table-4.csv  table-5.csv  table-6.csv
docs/chowlk/: MODL_Library.xml  MODL_Library_Simplified.xml  readme.md
modules/common/: agentrole.ttl  designed-artifact.ttl  event.shacl.ttl  event.ttl  informationobject.shacl.ttl  informationobject.ttl  metadata-shacl.ttl  metadata.ttl  site.shacl.ttl  site.ttl  system.shacl.ttl  system.ttl
modules/events/: failureevent.ttl
modules/imports/: get_imports.sh
release/ontology/0.0.1/: ontology.ttl
release/ontology/latest/: merged.ttl  ontology.rdf
tests/: README.md  event.t  informationobject.t  modules.txt  site.t  system.t  validate.sh
tests/event/: event.compentency.shacl.ttl  event.invalid.ttl  event.valid.ttl
tests/informationobject/: informationobject.invalid.ttl  informationobject.valid.ttl
tests/site/: site.invalid.ttl  site.valid.ttl
tests/system/: system.invalid.ttl  system.valid.ttl
versions/0.0.1/: moo.html  moo.ttl
(+13 files in other folders)
