[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charles Vardeman", email = "charles.vardeman@gmail.com"},
]
dependencies = [
    "rdfx @ git+https://github.com/charlesvardeman/rdfx.git",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
